@@ -22,12 +22,13 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-
 package jdk.jfr.tool;
 
+import java.lang.reflect.Field;
 import java.nio.file.Path;
 import java.time.OffsetDateTime;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.Iterator;
 import java.util.List;
 
@@ -50,7 +51,7 @@ import jdk.test.lib.process.OutputAnalyzer;
  * @library /test/lib /test/jdk
  * @modules jdk.jfr
  *
- * @run main/othervm jdk.jfr.tool.TestPrintJSON
+ * @run main/othervm --add-opens jdk.jfr/jdk.jfr.consumer=ALL-UNNAMED jdk.jfr.tool.TestPrintJSON
  */
 public class TestPrintJSON {
 
@@ -65,13 +66,13 @@ public class TestPrintJSON {
         JSONValue recording = o.get("recording");
         JSONArray jsonEvents = recording.get("events").asArray();
         List<RecordedEvent> events = RecordingFile.readAllEvents(recordingFile);
-        Collections.sort(events, (e1, e2) -> e1.getEndTime().compareTo(e2.getEndTime()));
+        Collections.sort(events, new EndTicksComparator());
         // Verify events are equal
         Iterator<RecordedEvent> it = events.iterator();
         for (JSONValue jsonEvent : jsonEvents) {
             RecordedEvent recordedEvent = it.next();
             String typeName = recordedEvent.getEventType().getName();
-            Asserts.assertEquals(typeName,  jsonEvent.get("type").asString());
+            Asserts.assertEquals(typeName, jsonEvent.get("type").asString());
             assertEquals(jsonEvent, recordedEvent);
         }
         Asserts.assertFalse(events.size() != jsonEvents.size(), "Incorrect number of events");
@@ -80,7 +81,7 @@ public class TestPrintJSON {
     private static void assertEquals(Object jsonObject, Object jfrObject) throws Exception {
         // Check object
         if (jfrObject instanceof RecordedObject) {
-            JSONValue values = ((JSONValue)jsonObject).get("values");
+            JSONValue values = ((JSONValue) jsonObject).get("values");
             RecordedObject recObject = (RecordedObject) jfrObject;
             Asserts.assertEquals(values.size(), recObject.getFields().size());
             for (ValueDescriptor v : recObject.getFields()) {
@@ -89,7 +90,7 @@ public class TestPrintJSON {
                 Object expectedValue = recObject.getValue(name);
                 if (v.getAnnotation(Timestamp.class) != null) {
                     // Make instant of OffsetDateTime
-                    String text = ((JSONValue)jsonValue).asString();
+                    String text = ((JSONValue) jsonValue).asString();
                     jsonValue = OffsetDateTime.parse(text).toInstant().toString();
                     expectedValue = recObject.getInstant(name);
                 }
@@ -103,7 +104,7 @@ public class TestPrintJSON {
         // Check array
         if (jfrObject != null && jfrObject.getClass().isArray()) {
             Object[] jfrArray = (Object[]) jfrObject;
-            JSONArray jsArray = ((JSONArray)jsonObject);
+            JSONArray jsArray = ((JSONArray) jsonObject);
             for (int i = 0; i < jfrArray.length; i++) {
                 assertEquals(jsArray.get(i), jfrArray[i]);
             }
@@ -149,5 +150,27 @@ public class TestPrintJSON {
 
         String jfrText = String.valueOf(jfrObject);
         Asserts.assertEquals(jfrText, jsonText, "Primitive values don't match. JSON = " + jsonText);
+    }
+
+    public static class EndTicksComparator implements Comparator<RecordedEvent> {
+        private final Field field;
+
+        public EndTicksComparator() throws Exception {
+            field = RecordedEvent.class.getDeclaredField("endTimeTicks");
+            field.setAccessible(true);
+        }
+
+        public long readEndTicks(RecordedEvent event) {
+            try {
+                return (Long) field.get(event);
+            } catch (Exception e) {
+                throw new InternalError("Could not read field", e);
+            }
+        }
+
+        @Override
+        public int compare(RecordedEvent a, RecordedEvent b) {
+            return Long.compare(readEndTicks(a), readEndTicks(b));
+        }
     }
 }
